<resources>
    <string name="app_name">Country House Automation</string>

    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>

    <string name="action_settings">Settings</string>
    <string name="action_light_settings">Light settings</string>
    <string name="action_thermostat_settings">Thermostat settings</string>
    <string name="action_water_level_settings">Water level settings</string>

    <string name="action_show_info">Info</string>

    <string name="action_refresh">Refresh</string>
    <string name="action_reorder">Reorder</string>

    <string name="title_activity_settings">Settings</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>

    <string name="light">Light</string>
    <string name="auto">Auto</string>
    <string name="manual">Manual</string>
    <string name="active">Active</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="thermostat">Thermostat</string>


    <string name="sample_date">Feb 02 2016, 22:10</string>
    <string name="sample_temperature">25.5°</string>
    <string name="sample_temperature2">1°</string>
    <string name="sample_temperature3">110°</string>
    <string name="centigrade">°</string>
    <string name="sample_humidity">80 %</string>
    <string name="loading">Loading&#8230;</string>
    <string name="sample_normal">normal</string>
    <string name="sample_4">4</string>
    <string name="who_is_online">Who is online</string>
    <string name="no_sensor_value">- - - -</string>
    <string name="mbar">mbar</string>
    <string name="km_h">km/h</string>
    <string name="millimeter">mm</string>
    <string name="centimeter">cm</string>
    <string name="sample_sensor_name">Sensor name</string>
    <string name="pressure">Pressure</string>
    <string name="wind">Wind</string>
    <string name="rain">Rain</string>
    <string name="water_level">Water level</string>
    <string name="outside">Outside</string>
    <string name="log_and_chart">Log and chart</string>
    <string name="pin_to_dashboard">Pin to dashboard</string>
    <string name="log">Log</string>
    <string name="summer">Summer</string>
    <string name="winter">Winter</string>
    <string name="summer_and_pool"><![CDATA[Summer & Pool]]></string>

    <string-array name="listArray">
        <item>Sunrise</item>
        <item>Time</item>
        <item>Duration</item>
    </string-array>

    <string-array name="listValues">
        <item>S</item>
        <item>T</item>
        <item>D</item>
    </string-array>

    <string-array name="boilerModeListArray">
        <item>Off</item>
        <item>Summer</item>
        <item>Summer and pool</item>
        <item>Winter</item>
    </string-array>

    <string-array name="boilerModeListArrayValues">
        <item>N</item>
        <item>S</item>
        <item>P</item>
        <item>W</item>
    </string-array>

    <string-array name="speedTestRangeValues">
        <item>0</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>5000</item>
    </string-array>

</resources>
