<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/sensor_margin_size"
    card_view:cardCornerRadius="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/outside"
            android:textSize="@dimen/widget_caption" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="100"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/temperature_value"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/no_sensor_value"
                android:textSize="@dimen/sensor_t_size" />

            <TextView
                android:id="@+id/temperature_trend"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_toEndOf="@+id/temperature_value"
                android:layout_toRightOf="@+id/temperature_value"
                android:gravity="center_vertical"
                android:text="↑"
                android:textSize="@dimen/sensor_trend_size" />
        </RelativeLayout>

        <TextView
            android:id="@+id/humidity_value"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:gravity="center"
            android:text="@string/no_sensor_value"
            android:textSize="@dimen/sensor_h_size" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <TextView
                android:id="@+id/signal_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_4"
                android:textSize="@dimen/sensor_footer_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/battery_value"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_normal"
                android:textSize="@dimen/sensor_footer_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>