<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/sensor_margin_size"
    card_view:cardCornerRadius="4dp"
    card_view:cardPreventCornerOverlap="true"
    card_view:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sensor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/water_level"
            android:textSize="@dimen/widget_caption" />


        <TextView
            android:id="@+id/water_percent_value"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="50"
            android:gravity="center|center_vertical"
            android:text="@string/no_sensor_value"
            android:textSize="@dimen/widget_t_size" />

        <TextView
            android:id="@+id/ball_valve_switch_state"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="20"
            android:gravity="center|center_vertical"
            android:text="@string/no_sensor_value"
            android:textSize="@dimen/widget_l_size" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

            <TextView
                android:id="@+id/distance_cm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_normal"
                android:textSize="@dimen/sensor_footer_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="20" />

            <TextView
                android:id="@+id/ball_valve_state"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_normal"
                android:textSize="@dimen/sensor_footer_size" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="10" />

        </LinearLayout>

    </LinearLayout>
</android.support.v7.widget.CardView>