<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ge.altasoft.gia.cha.MainActivity"
    tools:showIn="@layout/activity_main">

    <LinearLayout
        android:id="@+id/container0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/lightContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ge.altasoft.gia.cha.views.DragLinearLayout
                android:id="@+id/lightDragLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="8pt"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp">

                <ToggleButton
                    android:id="@+id/lightsAutoMode"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/x_toggle_button"
                    android:textOff="@string/manual"
                    android:textOn="@string/auto" />

                <TextView
                    android:id="@+id/lightsTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/sample_date"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/solarContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <include
                layout="@layout/boiler_layout"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginBottom="20dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/SolarTimeTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/sample_date"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/thermostatContainer1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ge.altasoft.gia.cha.views.DragLinearLayout
                android:id="@+id/thermostatSensorDragLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="8pt"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:weightSum="1">

                <TextView
                    android:id="@+id/thermostatTimeTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/sample_date"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/thermostatContainer2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ge.altasoft.gia.cha.views.DragLinearLayout
                android:id="@+id/thermostatRelayDragLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_margin="8pt"
                android:layout_weight="1"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorButtonNormal"
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:paddingEnd="8dp"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:paddingStart="8dp"
                android:paddingTop="4dp"
                android:weightSum="1">

                <ToggleButton
                    android:id="@+id/thermostatAutoMode"
                    android:layout_width="60dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/x_toggle_button"
                    android:textOff="@string/off"
                    android:textOn="@string/active" />

                <TextView
                    android:id="@+id/thermostatTimeTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:gravity="bottom"
                    android:padding="4dp"
                    android:text="@string/sample_date"
                    android:textSize="16sp" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>